--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.profiles.default= local
 
-server.port=10000
+server.port=8080
 
-server.servlet.context-path=/iris
-
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
-
+#
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
 
 
-logging.level.com.kh.spring= debug
+#server.servlet.context-path=/iris-issues
+logging.level.com.iris.irisissue.controller= debug
