--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>1.116</version>
         </dependency>
 
+        <!--  json  -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
