--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ server.port=8080
 
 #server.servlet.context-path=/iris-issues
 logging.level.com.iris.irisissue.controller= debug
+
+
+#github api token
+github.token = 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
