--- a/vue-starter/package.json
+++ b/vue-starter/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0"
@@ -25,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "expose-loader": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
